--- a/analysis/Linear_model_garri_quality.Rmd
+++ b/analysis/Linear_model_garri_quality.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r Check that I have the packages}
-packages_used <- c("tidyverse", "ggplot2", "here", "stringr" , "sommer","lme4","metan", "rrBLUP","FactoMineR","corrplot")
+packages_used <- c("workflowr", "tidyverse", "ggplot2", "here", "stringr" , "sommer","lme4","metan", "rrBLUP","FactoMineR","corrplot")
 ip <- installed.packages()
 all_packages_installed <- TRUE
 for (package in packages_used){
@@ -18,13 +18,13 @@ for (package in packages_used){
     print(paste("Please install package", package))
     all_packages_installed <- FALSE
   } else {
-    library(package,
-  character.only = T) # load required package
+    library(package, character.only = T) # load required package
   } # end else statement
 }#END packages_used
 if (!all_packages_installed) stop("Need to install packages")
 
 ```
+
 
 ```{r Use here package}
 require(here)
@@ -50,14 +50,10 @@ str(Umu_22_func)
 summary(Oto_22_func)
 summary(Umu_22_func)
 ```
-
 ```{r creating plots}
 boxplot(Oto_22_func$wac. , main="Water absorbing capacity of garri OTO",ylab = "WAC",xlab="Genotypes")
 
 boxplot(Umu_22_func$wac. , main="Water absorbing capacity of garri UMU",ylab="WAC", xlab="Genotypes") #Removing outliers using the boxplot method
-
-
-
 
 boxplot(Oto_22_func$swelling.index, xlab="Genotypes", ylab="SI")
 boxplot(Oto_22_func$swelling.power, ylab="SP",xlab="Genotypes")
@@ -81,41 +77,46 @@ Umu_22_func <- Umu_22_func %>%
 Umu_22_func <- Umu_22_func %>% 
        rename(swelling.index= Swelling.index) # rename wac. to WAC
 
-
-
 Oto_22_func <- Oto_22_func %>% 
        rename(WAC= wac.) # rename wac. to WAC for otobi
 ```
 
 ```{r remove column sn and add column for year and location}
-
+#remove column, sn and add column for year and location
 Umu_22_func <-Umu_22_func %>%
   add_column(location = "Umudike", year="2022") # add column with location and year for Umudike
 
-Umu_22_func <- subset(Umu_22_func, select=-c(sn)) # Remove the sn
+#Umu_22_func <- subset(Umu_22_func, select=-c(sn)) # Remove the sn
 
 Umu_22_func <- Umu_22_func %>% relocate(location, year) # change the position of the location and year
 
 Oto_22_func <- Oto_22_func %>%
   add_column(location = "Otobi", year="2022") %>% relocate(location, year)
 # change the position of location and year from last column to the first column
+
+Oto_22_func <- Oto_22_func %>% dplyr::select("location", "year",  "Genotype","swelling.index", "swelling.power", "WAC", "Bulk.Density") # select the needed columns
+
+Umu_22_func <- Umu_22_func %>% dplyr:: select("location", "year",  "Genotype", "swelling.index", "swelling.power", "WAC", "Bulk.Density") # select the needed columns
+ 
 ```
 
 
 ```{r joining the two data frames}
-Umu_oto_22 <- rbind(Oto_22_func, Umu_22_func)
 
+#joining the two data frames
+Umu_oto_22 <- rbind(Oto_22_func, Umu_22_func)
 
 Umu_oto_22$location <- as.factor(Umu_oto_22$location)
 Umu_oto_22$year <- as.factor(Umu_oto_22$year)
-
 
 plot(Umu_oto_22)
 colnames(Umu_oto_22)
 ```
 
-# change Oto and Umu_19 to Umu_20
+
 ```{r importing 2019 functional properties data and renaming column}
+#importing 2019 functional properties data and renaming column
+# change Oto and Umu_19 to Umu_20
 Oto_19 <- read.csv(here::here("data", "functional-otobi2019_2020.csv"), head=T)
 
 Umu_19 <- read.csv(here::here("data", "Umu_func_pyt2019_2020.csv"), head=T)
@@ -151,10 +152,11 @@ dim(Oto_19)
 dim(Umu_19)
 ```
 
-# Rename Oto_Selected_aggre
-```{r select the need column from Oto_19 and Umu_19, Add year 2019, change the stucture of the data}
 
- #selecting  column
+```{r select the need column from Oto_19 and Umu_19, Add year 2019, change the stucture of the data}
+#select the need column from Oto_19 and Umu_19, Add year 2019, change the stucture of the data
+#Rename Oto_Selected_aggre
+
 
 Oto_Selected <- Oto_19 %>% dplyr::select("location", "Genotype" ,"swelling.index", "swelling.power", "WAC"          , "Bulk.Density" )
 
@@ -187,6 +189,7 @@ Umu_oto_19 <-  Umu_oto_19  %>% relocate(location, year) # change the positions o
 ```
 
 ```{r read in 2020_2021 data for Otobi and Umudike}
+#read in 2020_2021 data for Otobi and Umudike
 Umu_21 <- read.csv(here::here("data", "Umu_2020_2021_PYT_Functional.csv"), head=T) # input genotypes planted in 2020 and harvested in 2021
 
 Oto_21 <- read.csv(here::here("data", "OTOBI_2020_2021_PYT_Functional.csv"), head=T)
@@ -206,6 +209,7 @@ dim(Oto_21)
 
 ```{r combining 2021 Umudike and otobi in one data frame and adding year and location}
 
+#combining 2021 Umudike and otobi in one data frame and adding year and location
 Umu_21  <-  Umu_21  %>%
   add_column(location = "Umudike",year = "2021") # add year and location to Umu_21
 Oto_21  <-  Oto_21  %>%
@@ -218,9 +222,10 @@ Oto_21  <-  Oto_21  %>%
 ```
 
 ```{r combining all three years}
+#combining all three years
 pyt_functional <- rbind(Umu_oto_19, Umu_oto_21, Umu_oto_22) # combine all three years
 dim(pyt_functional)
-pyt_functional <- pyt_functional %>% arrange(Location)
+pyt_functional <- pyt_functional %>% arrange(location)
 pyt_functional = as.data.frame(pyt_functional)
 ```
 
@@ -229,7 +234,7 @@ pyt_functional = as.data.frame(pyt_functional)
 # create a new column that has Environment to make it look like the data frame in sommer example
 #rm(pyt_functional_1)
 pyt_functional_1 <- pyt_functional %>%
-unite( 'environment', Location:Year, sep= "_", remove = FALSE) # concantenating location and environment
+unite( 'environment', location:year, sep= "_", remove = FALSE) # concantenating location and environment
 
 
 #summary(wac_model)$varcomp
@@ -240,6 +245,8 @@ unite( 'environment', Location:Year, sep= "_", remove = FALSE) # concantenating 
 
 
 ```{r editing genotype names in pyt_functional_1$Genotype to match with snp$X and using metan package to change multiple column as factor}
+
+#editing genotype names in pyt_functional_1$Genotype to match with snp$X and using metan package to change multiple column as factor
 
 head(pyt_functional_1)
 
@@ -252,7 +259,7 @@ pyt_functional_1$Genotype = gsub(pattern = " ", replacement = "", x = pyt_functi
 library(metan)
 pyt_functional_1 <-  as.data.frame(pyt_functional_1)
 pyt_functional_1 <- as_factor(.data = pyt_functional_1, 
-                c("environment","Location","Year","Genotype"))
+                c("environment","location","year","Genotype"))
 str(pyt_functional_1)
 
 length(levels(pyt_functional_1$Genotype))
@@ -265,25 +272,26 @@ write.csv(x = pyt_functional_1$Genotype, file = "pyt_functional_all_years.csv")
 
 
 ```{r boxplot using the large data frame }
-str(pyt_functional_1)
+#boxplot using the large data frame
 boxplot
-ggplot(data = pyt_functional_1,aes(x=Year,y= swelling.index,fill=Location)) +
-  geom_boxplot() + facet_grid(.~Location)
+ggplot(data = pyt_functional_1,aes(x=year,y= swelling.index,fill=location)) +
+  geom_boxplot() + facet_grid(.~location)
 
-ggplot(data = pyt_functional_1,aes(x=Year,y= swelling.power,fill=Location)) +
-  geom_boxplot()+facet_grid(.~Location)
+ggplot(data = pyt_functional_1,aes(x=year,y= swelling.power,fill=location)) +
+  geom_boxplot()+facet_grid(.~location)
 
-ggplot(data = pyt_functional_1,aes(x=Year,y= WAC,fill=Location))+
-  geom_boxplot()+facet_grid(.~Location)
+ggplot(data = pyt_functional_1,aes(x=year,y= WAC,fill=location))+
+  geom_boxplot()+facet_grid(.~location)
 
-ggplot(data = pyt_functional_1,aes(x=Year,y= Bulk.Density,fill=Location))+
-  geom_boxplot()+facet_grid(.~Location)
-
+ggplot(data = pyt_functional_1,aes(x=year,y= Bulk.Density,fill=location))+
+  geom_boxplot()+facet_grid(.~location)
 
 ```
 
 
 ```{r removing outliers for swelling index using the quatile and interquatile ranges}
+
+#removing outliers for swelling index using the quatile and interquatile ranges
 quartiles_SI <- quantile(pyt_functional_1$swelling.index, probs=c(.25, .75), na.rm = TRUE) # qualtile for swelling index
 IQR_SI <- IQR(pyt_functional_1$swelling.index, na.rm = TRUE) # interquatile range  
  
@@ -292,8 +300,8 @@ Upper_SI <- quartiles_SI[2] + 1.5*IQR_SI
 data_no_outlier_SI <- subset(pyt_functional_1, pyt_functional_1$swelling.index > Lower_SI & pyt_functional_1$swelling.index < Upper_SI)
  
 dim(data_no_outlier_SI)
-ggplot(data = data_no_outlier_SI,aes(x=Year,y= swelling.index,fill=Location)) +
-  geom_boxplot() + facet_grid(.~Location)
+ggplot(data = data_no_outlier_SI,aes(x=year,y= swelling.index,fill=location)) +
+  geom_boxplot() + facet_grid(.~location)
 ```
 
 ```{r remove outlier for bulk density}
@@ -307,13 +315,14 @@ data_no_outlier_WAC <- subset(pyt_functional_1, pyt_functional_1$WAC > Lower_WAC
  
 dim(data_no_outlier_WAC)
 
-ggplot(data = data_no_outlier_WAC,aes(x=Year,y= WAC,fill=Location)) +
-  geom_boxplot() + facet_grid(.~Location)
-ggplot(data = pyt_functional_1,aes(x=Year,y= WAC,fill=Location))+
-  geom_boxplot()+facet_grid(.~Location)
+ggplot(data = data_no_outlier_WAC,aes(x=year,y= WAC,fill=location)) +
+  geom_boxplot() + facet_grid(.~location)
+ggplot(data = pyt_functional_1,aes(x=year,y= WAC,fill=location))+
+  geom_boxplot()+facet_grid(.~location)
 ```
 
 ```{r extract each year to get the year information}
+#extract each year to get the year information
 oto20  <- droplevels(pyt_functional_1[pyt_functional_1$environment == "Otobi_2020",])
 oto21  <- droplevels(pyt_functional_1[pyt_functional_1$environment == "Otobi_2021",])
 oto22  <- droplevels(pyt_functional_1[pyt_functional_1$environment == "Otobi_2022",])
@@ -348,6 +357,7 @@ dim(pyt_functional_1)
 ```
 
 ```{r, trait correlation}
+#trait correlation
 corr_functional <-pyt_functional_1[,-c(1:4)]
 corr_functional <- corr_functional[,-c(5)]
 corr_func <- cor(corr_functional,  use="complete.obs") # correlation
@@ -361,6 +371,7 @@ write.csv(corr_functional,file=here("./output/correlation_functional_all_year.cs
 ```
 
 ```{r, scatter plots for the covariance of the traits}
+
 plot(pyt_functional_1$WAC ~ pyt_functional_1$Bulk.Density)
 
 plot(pyt_functional_1$WAC ~ pyt_functional_1$swelling.power)
@@ -394,9 +405,12 @@ pyt_functional_1 %>%
      ggplot(.,aes(x=swelling.index, fill=environment))+ geom_density(alpha=0.75)
 
 plot_si
+
+pyt_functional_1 <- pyt_functional_1 %>% dplyr::rename(Location=location, Year=year)
 ```
 
 ```{r making a function to run the mixed model for all the traits without removing outliers}
+# r making a function to run the mixed model for all the traits without removing outliers
 traitname<- (c("swelling.index","swelling.power", "WAC", "Bulk.Density")) # matrix of column names
 
 Result.h2org<- matrix(nrow = 1, ncol = length(traitname))
@@ -437,6 +451,8 @@ Result.h2org
 
 
 ```{r  making a function to run the mixed model for all the traits after removing outliers}
+# r  making a function to run the mixed model for all the traits after removing outliers
+
 traitname<- (c("swelling.index","swelling.power", "WAC", "Bulk.Density")) # matrix of column names
 Result.h2 = matrix(nrow = 1, ncol = length(traitname)) # this is how we want the result of the heritability to appear after analysis
 colnames(Result.h2) <- traitname # naming the colnames of the heritability output so we can identify which trait has that heritability
@@ -489,7 +505,7 @@ df_lmer
 ```
 
 ```{r read in the dosage file and modify the row names to match with that in the phenotypic file}
-
+# r read in the dosage file and modify the row names to match with that in the phenotypic file
 snps_dosage <- read.csv(here::here("data/snps_199_genotype.csv"), head=T)
 
 dim(snps_dosage)
@@ -501,8 +517,8 @@ mt = rrBLUP::A.mat(snps_dosage1)
 heatmap(mt)
 
 
-install.packages("FactoMineR")
-library(FactoMineR)
+#install.packages("FactoMineR")
+#library(FactoMineR)
 PCA(mt)
 
 genotype_snps <- snps_dosage$X # get the genotype names from the snp dosage file to make it look like the names on the phenotype file
@@ -512,6 +528,7 @@ write.csv(genotype_snps,file=here("genotype_snps.csv")) # Had genotype names in 
 ```
 
 ```{r import the new data frame}
+#r import the new data frame
 snps_geno_name <- read.csv(here::here("data/genotype_snps.csv"), head=T)  # had genotype names in old order eg (NR17F10C2aP011)
 
 dim(snps_geno_name)
@@ -526,7 +543,7 @@ rownames(snps_dosage) <- snps_dosage$geno_name # Naming the row names
 ```
 
 ```{r removing missing data from the snps file}
-#removing missing data
+#removing missing data from the snps file
 for (j in 1:ncol(snps_dosage)) {
    snps_dosage[, j] <- ifelse(is.na(snps_dosage[, j]), mean(snps_dosage[, j], na.rm = TRUE), snps_dosage[, 
         j])
@@ -539,16 +556,12 @@ table(pyt_functional_1$Genotype == rownames(snps_dosage) )
 #snps_dosage1 = snps_dosage[,-1] # remove the column 1 of the snps file
 # new_snp <- cbind(geno_name,snps_dosage) # Combine the new and old order genotype names in one data frame.
 ```
-`
 
 ```{r, looking for snps that are not in the phenotype data}
 # gen = which(rownames(snps_dosage) %in%pyt_functional_1$Genotype ) # 
 # Subset the pheno data that has snp data 
 gt = which(pyt_functional_1$Genotype %in% rownames(snps_dosage) ) # identify the row number/genotype name those gentypes from pheno to snps
-
-
 phen1 = droplevels(pyt_functional_1[gt,]) # subset the pheno data that found in the snp data
-
 head(phen1)
 dim(phen1)
 dim(pyt_functional_1)
@@ -569,7 +582,6 @@ Geno_present <- rownames(snp2) %in% levels(phen1$Genotype)
 library(sommer)
 A <- rrBLUP::A.mat(snp2[,-1])
 heatmap(A)# heatmap for genotypes present in 194 genotypes
-install.packages("factoextra")
 library(factoextra)
 A_pca<-prcomp(A, scale=TRUE)
 
@@ -616,6 +628,7 @@ vpredict(mix_sp, h1 ~ V1/((V1)+(V2/3)+(V3/2)+(V4/6)))
 
 
 ```{r function to loop all mixed models using the GA matrix for all traits}
+# function to loop all mixed models using the GA matrix for all traits
 traitnames<- (c("swelling.index","swelling.power", "WAC", "Bulk.Density"))
 library(sommer)
 h2c = tibble() # an empty table that will contain the heritability for all the traits
@@ -667,6 +680,7 @@ df_mmer
 
 
 ```{r creating tables}
+# creating tables
 df_lmer <- cbind(Result.vcomp, T_h2 ) # bind the two data frames
 
 colnames(df_mmer)[6] = "H2Comb"
@@ -684,7 +698,7 @@ lmer_mmer_sort
 ```{r merging the functional data with the chemical data}
 All_chem <- read.csv(here::here("data/PYT_chemical_data/All_years_chem.csv")) 
 dim(All_chem)
-#pyt_functional <- pyt_functional %>% dplyr::rename(Location=location, Year=year)
+pyt_functional <- pyt_functional %>% dplyr::rename(Location=location, Year=year)
 pyt_functional <- pyt_functional %>% dplyr::mutate(combo=paste0(Location, Year, Genotype))
 All_chem <- All_chem %>% dplyr::mutate(combo=paste0(Location, Year, Genotype))
 str(All_chem)
@@ -692,39 +706,45 @@ All_chem <- All_chem[-1,] #remove row 1
 All_chem <- All_chem[-1]
 str(All_chem)
 
-All_chem <- All_chem %>% dplyr::mutate(Year_n=as.factor(Year)) %>% dplyr::select(-Year) %>% rename(Year=Year_n)
+#All_chem <- All_chem %>% dplyr::mutate(Year_n=as.factor(Year)) %>% dplyr::select(-Year) %>% rename(Year=Year_n)
 str(All_chem)
 
-
+#All_chem <- All_chem %>% dplyr::rename(location=Location, year=Year)
+All_chem <- All_chem%>% relocate(Location, Year) # change the position of the location and year
+All_chem$Location <- as.factor(All_chem$Location)
+All_chem$Year <- as.factor(All_chem$Year)
+All_chem$Genotype <- as.factor(All_chem$Genotype)
 chem_func <- dplyr::full_join(pyt_functional, All_chem, by=c("Location", "Year", "Genotype"))
 # chem_func <- merge(pyt_functional, All_chem, all.x=FALSE)
 
 dim(pyt_functional)
 dim(All_chem)
-dim(chem_func)
 str(chem_func)
-chem_func$Location <-as.factor(chem_func$Location)
 
-chem_func$Genotype <-as.factor(chem_func$Genotype)
+levels(chem_func$Genotype)[levels(chem_func$Genotype) =="TME419"] = "TMEB419" # changing genotype name pattern
+
+levels(chem_func$Genotype)[levels(chem_func$Genotype) =="IITA-TMS-1BA30572" ] = "IITA-TMS-IBA30572" # changing genotype name pattern
+chem_func$Genotype = gsub(pattern = " ", replacement = "", x = chem_func$Genotype) # remove space from the genotype name
+colnames(chem_func)
+
+str(chem_func)
 chem_func1 <- chem_func %>% dplyr::select(c("swelling.index","swelling.power","WAC","Bulk.Density","Amylose","Crude.Fiber")) # select only the numeric data
-
-
 ```
 
-```{r correlation plot of the chem_func data frame}
 
+```{r correlation plot of the chem_func data frame}
 library(corrplot)
 corr <- cor(chem_func1,use = "pairwise.complete.obs")
 cor_chem_func <- corrplot(corr, method = "number",type = "upper",order = "alphabet", is.corr = TRUE)
-
 ```
 
 
 ```{r box plot of functional with amylose and crude fiber}
+#box plot of functional with amylose and crude fiber
 chem_func2 <-chem_func %>% dplyr::select(c( "Location","Year","Genotype", "swelling.index","swelling.power","WAC", "Bulk.Density","Amylose","Crude.Fiber"))
 chem_func2$Location <- as.factor(chem_func2$Location)
 str(chem_func2)
-chem_func2 <- chem_func2[-1,]# remove row 1, it is empty and was created when I sorted my data
+#chem_func2 <- chem_func2[-1,]# remove row 1, it is empty and was created when I sorted my data
 
 ggplot(data = chem_func2,aes(x=Year,y= swelling.index,fill=Location)) +
   geom_boxplot() 
@@ -745,13 +765,7 @@ ggplot(data = chem_func2,aes(x=Year,y= Amylose,fill=Location))+
 
 ```
 
-
-```{r use the data with amylose and crude fiber for the lmer and broad sense heritability}
- 
-```
-
-
-```{r  making a function to run the mixed model for all the traits after removing outliers}
+```{r use the data with amylose and crude fiber for the lmer and broad sense heritability removing outliers}
 traitname<- (c("swelling.index","swelling.power", "WAC", "Bulk.Density", "Amylose","Crude.Fiber")) # matrix of column names
 Result.h2 = matrix(nrow = 1, ncol = length(traitname)) # this is how we want the result of the heritability to appear after analysis
 colnames(Result.h2) <- traitname # naming the colnames of the heritability output so we can identify which trait has that heritability
@@ -803,17 +817,215 @@ df_lmer <- cbind(Result.vcomp, T_h2 ) # bind the two data frame
 df_lmer 
 ```
 
+```{r using data with no outlier to make boxplot}
+
+ggplot(data = Dat_no_outlier,aes(x=Year,y= swelling.index,fill=Location)) +
+   geom_boxplot() 
+ggplot(data = Dat_no_outlier,aes(x=Year,y= swelling.power,fill=Location)) +
+  geom_boxplot()
+ggplot(data = Dat_no_outlier,aes(x=Year,y= WAC,fill=Location))+
+   geom_boxplot()
+ggplot(data = Dat_no_outlier,aes(x=Year,y= Bulk.Density,fill=Location)) +
+  geom_boxplot()
+ 
+ggplot(data = Dat_no_outlier,aes(x=Year,y= Amylose,fill=Location)) +
+  geom_boxplot()
+
+ggplot(data = Dat_no_outlier,aes(x=Year,y=Crude.Fiber,fill=Location)) +
+  geom_boxplot()
+ 
+ 
+```
+
+```{r correlation with data without outlier}
+corr <- cor(chem_func1,use = "pairwise.complete.obs")
+cor_chem_func <- corrplot(corr, method = "number",type = "upper",order = "alphabet", is.corr = TRUE)
+```
+```{r}
+#removing missing data
+for (j in 1:ncol(snps_dosage)) {
+   snps_dosage[, j] <- ifelse(is.na(snps_dosage[, j]), mean(snps_dosage[, j], na.rm = TRUE), snps_dosage[, 
+        j])
+}
+
+table(rownames(snps_dosage) == chem_func2$Genotype)
+
+table(chem_func2$Genotype == rownames(snps_dosage) )
+
+#snps_dosage1 = snps_dosage[,-1] # remove the column 1 of the snps file
+# new_snp <- cbind(geno_name,snps_dosage) # Combine the new and old order genotype names in one data frame.
+```
 
 ```{r}
-umu_hav_2020 <-read.csv("/Users/ca384/Documents/ChinedoziRepo/GarriQuality/data/2020_Umu_pyt_harvest_dmc.csv")
-colnames(umu_hav_2020)
+# gen = which(rownames(snps_dosage) %in%pyt_functional_1$Genotype ) # 
+# Subset the pheno data that has snp data 
+gt2 = which(chem_func2$Genotype %in% rownames(snps_dosage) ) # identify the row number/genotype name those gentypes from pheno to snps
 
-oto_hav_2020 <- read.csv("/Users/ca384/Documents/ChinedoziRepo/GarriQuality/data/2020_0t0bi_pyt_harvest_dmc.csv")
-colnames(oto_hav_2020)
+phen2 = droplevels(chem_func2[gt2,]) # subset the pheno data that found in the snp data
 
-umu_hav_2020<- umu_hav_2020 %>% 
-       rename(year = years) 
-Umu_Oto_2020_hvst <- rbind(umu_hav_2020,oto_hav_2020)
+head(phen2)
+dim(phen2)
+dim(chem_func2)
+length(rownames(snps_dosage)) # length row name of the snps
+length(levels(as.factor(phen2$Genotype))) # the length of the selected pheno data genotype levels 
+
+# if the legnths are equal no need subseting the snp data
+# but if the length is different we should subset the snp data in relation to the selected pheno genotypes
+library(ASRgenomics)
+gsnp2 = which(rownames(snps_dosage) %in% levels(phen2$Genotype)) 
+
+snp3 = snps_dosage[rownames(snps_dosage)[gsnp2],] # subset the snps based on the genotypes with snp and also phenotype
+
+gph2 = which(levels(phen2$Genotype) %in% rownames(snps_dosage))# looking for phenotype data in snps_dosage file.
+phen3 = phen2[gph2, ]
+all(phen3$Genotype %in% rownames(snp3))
+length(levels(phen3$Genotype))
+all(rownames(snp3) %in% levels(phen2$Genotype))
+```
+
+```{r script from moshood to clean up the snps file using the ASRgenomics}
+#A1 <- rrBLUP::A.mat(snp2[,-1])
+snp2 <- snp2[,-1]
+snp2 <- as.data.frame(snp2)
+snp2 <- snp2[,-1]
+snp2 <- as.matrix(snp2)
+snpsFilter  <- qc.filtering(M=snp2, base=FALSE, ref=NULL,
+        marker.callrate=0.2,ind.callrate=0.2, maf=0.05,heterozygosity=0.95,
+        Fis=1, impute=FALSE,  plots=FALSE,message=FALSE)$M.clean
+
+# compute genomic relationship matrix from filtered SNPS marker
+Gmat  <- G.matrix(M = snpsFilter, method = "VanRaden", na.string = NA,message=FALSE)$G
+
+# Tuning the G-matrix (Gmat) by bending i.e. adjust it near a positive definite
+# by making some of its very small or negative eigenvalues slightly positive (Matrix::nearPD # Bend the Gmat matr
+G_bend <- G.tuneup(G=Gmat, bend=TRUE, eig.tol = 1e-06,message=FALSE)$Gb 
+
+# Tuning the G-matrix (Gmat) by blending #
+G_blend <- G.tuneup(G=G_bend, blend=TRUE, pblend=0.02,message=FALSE)$Gb
+
+# get the inverse of blend genomic relationship matrix
+#kinv <<- G.inverse(G = G_blend, sparseform = TRUE,message = FALSE)$Ginv
+
+
+
+
+#heatmap(A1)# heatmap for genotypes present in 194 genotypes
+#install.packages("factoextra")
+#library(factoextra)
+#A1_pca<-prcomp(A1, scale=TRUE)
+
+#fviz_eig(A1_pca) # scree plot
 ```
 
 
+```{r}
+traitname<- (c("swelling.index","swelling.power", "WAC", "Bulk.Density", "Amylose","Crude.Fiber")) # matrix of column names
+Result.h2 = matrix(nrow = 1, ncol = length(traitname)) # this is how we want the result of the heritability to appear after analysis
+colnames(Result.h2) <- traitname # naming the colnames of the heritability output so we can identify which trait has that heritability
+rownames(Result.h2) <- "H2Comb" # heritability for the combine analysis
+Result.vcomp = matrix(nrow = length(traitname), ncol = 5) # Result matrix for the variance components
+colnames(Result.vcomp) <- c("vg", "vgl","vgy", "vp","ve") # column names for the variance components
+rownames(Result.vcomp) <- traitname # row names of the variance components
+for(trait in traitname){
+  tr = paste0(trait)  # the loop will be able to select  and analyse each trait
+  Na_g = which(is.na(chem_func2[,tr]))# identify traits with missing data
+  if(length(Na_g) == 0){                 # to see if there is any null within the length within the length
+    DatWithout_na = chem_func2    # if there is no na, it will use the pyt_functional_1 data frame
+  }else{
+    DatWithout_na2 = chem_func2[-Na_g,]  # if there is missing data in the data frame, the use a new dataframe pyt_functional_1[-Na_g,] that has all the na removed
+  }
+  
+  eval(parse(text=paste("model2=lmer(formula = ",trait, " ~  Year + Location + Year:Location + (1|Genotype) + (1|Genotype:Year) +(1|Genotype:Location), data = DatWithout_na2 )")))
+  RES_trait<- rstudent(model2) # i am using the model that used data without missing data
+  outliers<- which(abs(scale(RES_trait))>3) #Remove outlier
+  Dat_no_outlier2 = DatWithout_na2[-outliers,] # data frame without outliers
+  eval(parse(text=paste("model=lmer(formula = ",trait, " ~  Year + Location + Year:Location + (1|Genotype) + (1|Genotype:Year) +(1|Genotype:Location), data = Dat_no_outlier2 )"))) # run the model
+  ss <- summary(model)
+  sv <- as.data.frame(ss$varcor) # get the variance component
+  sv
+  gv <- sv[sv$grp=="Genotype", "vcov"] # genetic variance
+  gl <- sv[sv$grp == "Genotype:Location" , "vcov"] # genotype by location variance
+  gy <- sv[sv$grp == "Genotype:Year" , "vcov"] # genotype by year variance
+  ve <- sv[sv$grp == "Residual" , "vcov"] # residual variance
+  vph <- gv + gl/2 + gy/3 + ve/6 # variance due to phenotype
+  # make a matrix of the variance output
+  H2 <- gv/vph
+  Result.vcomp[trait,1] = gv
+  Result.vcomp[trait,2] = gl
+  Result.vcomp[trait,3] = gy
+  Result.vcomp[trait,4] = ve
+  Result.vcomp[trait,5] = vph
+  Result.h2[,trait] = H2
+}
+
+Result.vcomp
+
+Result.h2
+
+Result.h2 <- data.frame(Result.h2) # making a data frame for the heritability output
+Result.vcomp <- data.frame(Result.vcomp) #making a data frame for the vcomp output
+T_h2 <- t(Result.h2) # transpose the heritability output
+
+df_lmer <- cbind(Result.vcomp, T_h2 ) # bind the two data frame
+df_lmer 
+```
+
+
+
+
+```{r function to loop all mixed models using the GA matrix for all traits}
+traitnames<- (c("swelling.index","swelling.power", "WAC", "Bulk.Density", "Amylose","Crude.Fiber"))
+
+h2c = tibble() # an empty table that will contain the heritability for all the traits
+vcomp = tibble() # an empty table that will contains the variance components
+names(vcomp) = c("vg","vgl","vgy","vp","ve")
+# h2c = as.data.frame(h2c)
+# rownames(h2c) = traitnames
+# h2c = tibble(h2c)
+for(traits in traitnames){
+ trs = paste0(traits) # the loop will be able to select  and analyse each trait
+eval(parse(text=paste(
+  "model1= mmer(",traits,"~ Year + Location + Year:Location,
+  random=~vsr(Genotype, Gu=Gmat) + Genotype:Year + Genotype:Location,
+  rcov=~units,
+  data= Dat_no_outlier2)")))
+
+summary(model1)
+ss = summary(model1)
+ss = data.frame(ss$varcomp)
+vg = ss[1,"VarComp"] # assigning names to the variance component in column 1
+vgy = ss[2,"VarComp"]
+vgl = ss[3,"VarComp"]
+ve = ss[4,"VarComp"]
+vp =  vg + vgl/2 + vgy/3  + ve/6 
+tt = cbind(vg,vgl, vgy, vp, ve)
+
+rownames(tt) = paste(traits) # This will calculate the heritability of each of the traits
+
+vcomp = rbind(vcomp,tt) # this bind the variance components to the functional properties
+
+name = paste0(traits)
+h2 = vpredict(model1, ~ V1/(V1 + (V2/3) + (V3/2)+(V4/6)) )
+h2 = as.data.frame(h2)
+rownames(h2) = paste0(traits)
+h2c = rbind(h2c,h2)
+
+}
+vcomp
+h2c 
+```
+
+```{r creating tables}
+df_lmer <- cbind(Result.vcomp, T_h2 ) # bind the two data frames
+
+colnames(df_mmer)[6] = "H2Comb"
+df_mmer1 = df_mmer[,-7]
+rownames(df_mmer1) <- c("swelling.index_mmer", "swelling.power_mmer", "WAC_mmer", "Bulk.Density_mmer")
+rownames(df_lmer) <- c("swelling.index_lmer", "swelling.power_lmer", "WAC_lmer", "Bulk.Density_lmer")
+
+lmer_mmer <- rbind(df_lmer, df_mmer1) # bind the two data frames
+
+lmer_mmer
+
+lmer_mmer_sort <- lmer_mmer[sort(rownames(lmer_mmer)),] # sort the lmer_mmer data frame according to the rownames
+lmer_mmer_sort
